--- a/lib/src/components/containers/lectures_container/lectures_container.html
+++ b/lib/src/components/containers/lectures_container/lectures_container.html
@@ -66,7 +66,7 @@
           (click)="onShowCustomClick()"
           [class.button-primary]="isCustomSelected"
           class="tags__item button-tag">
-        Движухи
+        События
       </button>
 
       <button
