--- a/lib/src/components/containers/lectures_container/lectures_container.scss
+++ b/lib/src/components/containers/lectures_container/lectures_container.scss
@@ -74,9 +74,9 @@
   }
 
   .schedule__header {
+    @include sticky;
     height: 44px;
     margin: 0 -8px 0 -24px;
-    position: sticky;
     top: -4px;
     z-index: 1;
     -webkit-backface-visibility: hidden;
@@ -86,7 +86,7 @@
       content: "";
       display: block;
       height: 4px;
-      position: sticky;
+      @include sticky;
     }
 
     &::before {
@@ -112,7 +112,7 @@
     background-color: #f2f3fa;
     height: 40px;
     padding: 0 24px;
-    position: sticky;
+    @include sticky;;
     top: 0;
     margin-top: -4px;
     z-index: 3;
@@ -185,7 +185,7 @@
   }
 
   .time__container {
-    position: sticky;
+    @include sticky;;
     top: 48px;
   }
 
