--- a/lib/src/components/layout/layout.html
+++ b/lib/src/components/layout/layout.html
@@ -39,6 +39,7 @@
         <li
           (click)="onMenuItemClick(item)"
           *ngFor="let item of RoutePaths.menu"
+          [class.nav__item--active]="isActive(item)"
           class="nav__item">
 
           <a
