--- a/lib/src/components/sections/sections.html
+++ b/lib/src/components/sections/sections.html
@@ -26,19 +26,10 @@
     Для общения
   </h2>
 
-  <div
-    class="sections__grid">
-
-    <cf-section
-      (change)="onCustomSectionModeClick()"
-      [title]="'Показывать движухи'"
-      [isChecked]="isCustomSectionMode">
-    </cf-section>
-  </div>
+  <toggle
+    [text]="'Показывать события'"
+    [isChecked]="isCustomSectionMode"
+    (onChange)="onCustomSectionModeClick()"
+    class="toggle-line">
+  </toggle>
 </section>
-
-<toggle
-  [text]="'Показывать движухи'"
-  [isChecked]="true"
-  class="toggle-line">
-</toggle>
