revert svg color

--- a/lib/src/components/containers/about_container/about_container.html
+++ b/lib/src/components/containers/about_container/about_container.html
@@ -34,8 +34,8 @@
       xmlns="http://www.w3.org/2000/svg"
       width="37" height="40" viewBox="0 -3 37 40">
 			<g fill="none" fill-rule="evenodd">
-				<path stroke="currentColor" d="M1 11h24v24H1z"/>
-				<path fill="currentColor" d="M13 0h24v24H13z"/>
+				<path stroke="#FCDE98" d="M1 11h24v24H1z"/>
+				<path fill="#FCDE98" d="M13 0h24v24H13z"/>
 			</g>
     </svg>
 
