--- a/lib/src/components/layout/layout.html
+++ b/lib/src/components/layout/layout.html
@@ -90,8 +90,10 @@
       class="drawer__footer-icon">
       <path d="M15.4 7H20l-7.08 7.06-2.3-2.29L15.41 7zm-6.8 4.04l3.67 3.67L9.97 17 4 11.04h4.6z" fill-rule="evenodd"/>
     </svg>
-
-    Сделано командой Wrike
+    
+    Сделано&nbsp;
+    
+    <a href="https://spb.hh.ru/employer/815269" target="_blank" >командой Wrike</a>
   </footer>
 </material-drawer>
 
