--- a/lib/src/components/layout/layout.html
+++ b/lib/src/components/layout/layout.html
@@ -2,90 +2,148 @@
 <material-drawer
   temporary
   #drawer="drawer"
-  [attr.overlay]="true">
+  [attr.overlay]="true"
+  class="drawer">
 
-  <material-list
-    *deferredContent>
+  <header
+    class="drawer__header">
+
+    <svg
+      xmlns:xlink="http://www.w3.org/1999/xlink" width="51" height="72" viewBox="0 0 51 72"
+      class="drawer__logo"
+      title="CodeFest X">
+      <defs>
+        <path id="a" d="M.17.05h41.82V72H.17z"/>
+      </defs>
+      <g fill="none" fill-rule="evenodd">
+        <g transform="translate(9)">
+          <mask id="b" fill="#fff">
+            <use xlink:href="#a"/></mask>
+          <path fill="#33A7D8" fill-rule="nonzero" d="M37.69.37L.17 19.29v39.36l4.07 1.42v10.4l7.16-7.91 26.65 9.27a2.97 2.97 0 0 0 3.94-2.82V3.05a2.97 2.97 0 0 0-4.3-2.68" mask="url(#b)"/>
+        </g>
+        <path fill="#000" fill-rule="nonzero" d="M37.78 20.52l-34.45-4.5A2.99 2.99 0 0 0 0 19.05v37.9A3 3 0 0 0 3.22 60l34.47-3.1a2.58 2.58 0 0 0 2.31-2.6V23.1c0-1.31-.95-2.42-2.22-2.59"/>
+        <path fill="#FFF" fill-rule="nonzero" d="M27.35 47.46c0 2.17-1.4 3.26-2.93 3.37-1.23.1-2.18-.14-2.83-.7v-2.97c.7.72 1.85 1.15 2.72 1.1.53-.02.8-.35.8-.68 0-1.27-3.6-.63-3.6-3.97 0-2.02 1.18-3.24 3.07-3.25.96 0 1.77.3 2.43.92v2.77c-.74-.7-1.5-1.18-2.34-1.16-.5.01-.74.34-.74.68 0 1.15 3.42.29 3.42 3.9zm3.75-6.88h1.5v2.48l-1.5.03v3.4c0 .83.2 1.13.7 1.1.27 0 .54-.13.8-.37v2.45c-.36.4-.86.62-1.5.67-1.24.09-2.11-.95-2.12-3v-4.2l-1.09.02V40.6h1.09V38l2.11.03v2.54zM4.83 38.53l8.36.06v3.14l-5.44.07v2.25l4.1-.1v3.04l-4.1.18v4.62L4.84 52V38.53zm10.96 6.34c.1-1.2.59-1.95 1.26-1.96.61-.01 1.12.75 1.13 1.88l-2.39.08zm1.37-4.48c-2.52 0-3.91 2.58-3.91 5.63 0 3.57 1.81 5.5 4.12 5.33a3.8 3.8 0 0 0 2.8-1.28v-2.74c-.72.62-1.48.97-2.25 1.01-1.04.06-1.9-.43-2.11-1.52l4.76-.21v-.89c0-2.92-1.18-5.34-3.4-5.33zm-3.97-9.7v3.71a4.71 4.71 0 0 1-3.39 1.26c-3.18-.08-5.8-2.91-5.8-7.2 0-4.27 2.57-6.78 5.79-6.43 1.22.14 2.28.66 3.22 1.6v3.51a4.8 4.8 0 0 0-3.2-1.74c-1.64-.15-3 1.13-3 3.24 0 2.2 1.4 3.58 3.1 3.66a3.5 3.5 0 0 0 3.28-1.62zm20.02-.3c.07-1.06.46-1.69 1-1.65.47.04.88.77.89 1.77l-1.9-.13zM37 31.53c0-2.6-.95-4.86-2.71-5.03-2-.2-3.1 1.98-3.09 4.7V31.5c.02.38.05.74.1 1.08l.01.05.03.18c.4 2.18 1.63 3.43 3.12 3.47 1.03.02 1.7-.28 2.23-.9v-2.44c-.58.49-1.19.73-1.8.7-.82-.03-1.5-.54-1.67-1.52l3.78.2v-.78zm-10.26 1.81c-.8-.04-1.35-1.1-1.35-2.5s.55-2.4 1.35-2.34c.56.04.97.45 1.25 1.2v2.59c-.28.72-.69 1.08-1.25 1.05zM28 35.86l2.14.06-.01-12.36-2.15-.25v3.93c-.44-.94-1.07-1.44-1.89-1.52-1.84-.17-2.98 2.25-2.98 4.99 0 2.73 1.12 5.3 3 5.35.82.02 1.46-.4 1.89-1.29v1.09zm-9.61-2.9c-.92-.04-1.59-1.16-1.59-2.64 0-1.43.67-2.5 1.58-2.44.9.07 1.55 1.23 1.55 2.63 0 1.45-.64 2.49-1.54 2.45zm0-7.98c-2.36-.22-4.1 2.01-4.1 5.19 0 3.13 1.68 5.63 4.1 5.69 2.35.06 3.9-2.23 3.9-5.2-.01-3.01-1.62-5.46-3.9-5.68z"/>
+      </g>
+    </svg>
+  </header>
+
+  <div
+    class="drawer__body">
+
+    <nav>
+
+      <ul
+        class="nav">
+
+        <!-- nav__item--active for active state -->
+        <li
+          (click)="onMenuItemClick(item)"
+          *ngFor="let item of RoutePaths.menu"
+          [class.nav__item--active]="isActive(item)"
+          class="nav__item">
+
+          <a
+            class="nav__link">
+            {{ item.title }}
+          </a>
+        </li>
+      </ul>
+    </nav>
 
     <div
-      group
-      class="mat-drawer-spacer">
+      *ngIf="isAuthorized"
+      class="user">
 
       <div
-        label>
-        Codefest X
+        class="user__media">
+
+        <img
+          [src]="avatarPath"
+          [alt]="userName"
+          [title]="userName"
+          width="40"
+          height="40"
+          class="user__image">
       </div>
-    </div>
-
-    <nav
-      group>
-
-      <material-list-item
-        *ngFor="let item of RoutePaths.menu"
-        (click)="onMenuItemClick(item)">
-        {{ item.title }}
-      </material-list-item>
 
       <div
-        *ngIf="isAuthorized">
-
-        <img [src]="avatarPath" alt="" width="50">
-
-        <div>{{ userName }}</div>
+        class="user__section">
 
         <div
-          (click)="onLogout()">
-          Выйти
+          class="user__name">
+          {{ userName }}
         </div>
+
+        <button
+          class="user__logout-button">
+          Выйти
+        </button>
       </div>
-    </nav>
-  </material-list>
+    </div>
+  </div>
+
+  <footer
+    class="drawer__footer">
+
+    <svg
+      xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="24" height="24"
+      class="drawer__footer-icon">
+      <path d="M15.4 7H20l-7.08 7.06-2.3-2.29L15.41 7zm-6.8 4.04l3.67 3.67L9.97 17 4 11.04h4.6z" fill-rule="evenodd"/>
+    </svg>
+    
+    Сделано&nbsp;
+    
+    <a href="https://spb.hh.ru/employer/815269" target="_blank" >командой Wrike</a>
+  </footer>
 </material-drawer>
 
 <!-- Content -->
 <div
   class="layout__root">
 
-  <!-- Header -->
-  <header
-    class="layout__header">
+  <div
+    class="layout__container">
 
-    <button
-      *ngIf="isMenuShown"
-      cf-button
-      class="layout__nav-button button-icon-only"
-      (click)="drawer.toggle()">
+    <!-- Header -->
+    <header
+      class="layout__header">
 
-      <svg
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-        <g fill="currentColor" fill-rule="evenodd">
+      <button
+        *ngIf="isMenuShown"
+        cf-button
+        class="layout__nav-button button-icon-only"
+        (click)="drawer.toggle()">
+
+        <svg
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+          <g fill="currentColor" fill-rule="evenodd">
             <rect width="18" height="2" x="3" y="6" rx="1"/>
             <rect width="18" height="2" x="3" y="11" rx="1"/>
             <rect width="18" height="2" x="3" y="16" rx="1"/>
-        </g>
-      </svg>
-      <span class="visually-hidden">Меню</span>
-    </button>
+          </g>
+        </svg>
+        <span class="visually-hidden">Меню</span>
+      </button>
 
-    <button
-      *ngIf="isBackShown"
-      cf-button
-      class="layout__nav-button button-icon-only"
-      (click)="goBack()">
+      <button
+        *ngIf="isBackShown"
+        cf-button
+        class="layout__nav-button button-icon-only"
+        (click)="goBack()">
 
-      <svg
-        aria-hidden="true"
-        xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-        <path fill="currentC" d="M17.995 11h-9.59l4.007-3.994a1.003 1.003 0 1 0-1.42-1.42L5.285 11.29a1 1 0 0 0-.21.33c-.1.243-.1.516 0 .759a1 1 0 0 0 .21.33l5.707 5.703a1 1 0 0 0 1.42 0 .999.999 0 0 0 0-1.42l-4.007-3.994h9.59a1 1 0 1 0 0-1.998z"/>
-      </svg>
-      <span class="visually-hidden">Назад</span>
+        <svg
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+          <path fill="currentC" d="M17.995 11h-9.59l4.007-3.994a1.003 1.003 0 1 0-1.42-1.42L5.285 11.29a1 1 0 0 0-.21.33c-.1.243-.1.516 0 .759a1 1 0 0 0 .21.33l5.707 5.703a1 1 0 0 0 1.42 0 .999.999 0 0 0 0-1.42l-4.007-3.994h9.59a1 1 0 1 0 0-1.998z"/>
+        </svg>
+        <span class="visually-hidden">Назад</span>
 
-    </button>
+      </button>
 
-    <h1
-      *ngIf="isTitleShown"
-      class="layout__title">
+      <h1
+        *ngIf="isTitleShown"
+        class="layout__title">
       <span>
         {{ title }}
         &ngsp;
@@ -95,30 +153,31 @@
           ></ng-content>
         </span>
       </span>
-    </h1>
+      </h1>
 
-    <div
-      *ngIf="isSpacerShown"
-      class="layout__header-spacer">
-    </div>
+      <div
+        *ngIf="isSpacerShown"
+        class="layout__header-spacer">
+      </div>
 
-    <ng-content
-      select="[actions]"
-    ></ng-content>
-  </header>
-
-  <ng-content
-    select="[pre-content]"
-  ></ng-content>
-
-  <!-- Content -->
-  <main
-    #main
-    (scroll)="onScroll($event)"
-    class="layout__content">
+      <ng-content
+        select="[actions]"
+      ></ng-content>
+    </header>
 
     <ng-content
-      select="[content]"
+      select="[pre-content]"
     ></ng-content>
-  </main>
+
+    <!-- Content -->
+    <main
+      #main
+      (scroll)="onScroll($event)"
+      class="layout__content">
+
+      <ng-content
+        select="[content]"
+      ></ng-content>
+    </main>
+  </div>
 </div>
