--- a/lib/src/components/containers/login_container/login_container.html
+++ b/lib/src/components/containers/login_container/login_container.html
@@ -8,6 +8,8 @@
     class="button-icon">
     <path d="M13.233 12l5.508-5.501A.878.878 0 0 0 17.5 5.257l-5.5 5.51-5.5-5.51A.878.878 0 1 0 5.26 6.5l5.508 5.5-5.508 5.5a.875.875 0 0 0 0 1.242.874.874 0 0 0 1.241 0l5.5-5.509 5.5 5.51a.874.874 0 0 0 1.241 0 .875.875 0 0 0 0-1.242L13.233 12z" fill-rule="evenodd"/>
   </svg>
+
+  <span class="visually-hidden">Отменить вход</span>
 </button>
 
 <section
@@ -20,7 +22,9 @@
 
   <p
     class="login__description">
-    Чтобы оставлять комментарии к докладам, получать уведомления о начинающихся событиях и участвовать в голосовании
+    Чтобы оставлять комментарии к докладам, получать уведомления о&nbsp;начинающихся
+    &ngsp;событиях и&nbsp;участвовать в&nbsp;голосовании
+    <span class="visually-hidden">, войди, используя аккаунт в соцсети:</span>
   </p>
 
   <div
@@ -33,10 +37,13 @@
       class="login__buttons-item">
 
       <svg
+        aria-hidden="true"
         xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
         class="button-icon">
         <path d="M12 3c-4.97 0-9 4.13-9 9.23a9.21 9.21 0 0 0 6.16 8.75c.45.09.6-.2.6-.44v-1.57c-2.5.56-3.03-1.24-3.03-1.24-.41-1.06-1-1.35-1-1.35-.82-.57.06-.56.06-.56.9.07 1.38.95 1.38.95.8 1.41 2.1 1 2.62.77a2 2 0 0 1 .57-1.23c-2-.24-4.1-1.03-4.1-4.56 0-1.01.35-1.84.92-2.48-.09-.23-.4-1.17.1-2.44 0 0 .75-.25 2.47.94a8.42 8.42 0 0 1 2.25-.3 8.43 8.43 0 0 1 2.25.3c1.72-1.2 2.48-.94 2.48-.94.49 1.27.18 2.2.09 2.44.57.64.92 1.47.92 2.48 0 3.54-2.1 4.32-4.1 4.55.31.28.6.85.6 1.7v2.54c0 .25.15.53.61.44A9.21 9.21 0 0 0 21 12.23C21 7.13 16.97 3 12 3" fill-rule="evenodd"/>
       </svg>
+
+      <span class="visually-hidden">Войти через GitHub</span>
     </button>
 
     <!-- facebook -->
@@ -46,10 +53,13 @@
       class="login__buttons-item">
 
       <svg
+        aria-hidden="true"
         xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
         class="button-icon">
         <path d="M10.5 7.1v2.2H9v2.68h1.5v7.99h3.1v-8h2.06s.2-1.28.3-2.69H13.6V7.44c0-.27.34-.64.67-.64h1.69V4h-2.3c-3.23 0-3.16 2.69-3.16 3.1z" fill-rule="evenodd"/>
       </svg>
+
+      <span class="visually-hidden">Войти через Facebook</span>
     </button>
 
     <!-- vk -->
@@ -59,10 +69,18 @@
       class="login__buttons-item">
 
       <svg
+        aria-hidden="true"
         xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
         class="button-icon">
         <path d="M20.884 16.022a1.184 1.184 0 0 0-.061-.113c-.312-.546-.908-1.216-1.788-2.01l-.019-.018-.01-.01-.009-.008h-.009c-.4-.37-.652-.619-.758-.746-.194-.242-.237-.488-.131-.737.074-.188.355-.584.842-1.19.256-.322.459-.58.609-.773 1.08-1.395 1.547-2.286 1.404-2.674l-.056-.09c-.038-.055-.134-.105-.29-.15a1.516 1.516 0 0 0-.6-.023l-2.695.018a.36.36 0 0 0-.188.005l-.121.027-.047.023-.037.027a.411.411 0 0 0-.103.095.62.62 0 0 0-.094.16 14.662 14.662 0 0 1-1.002 2.045 19.3 19.3 0 0 1-.636.978 4.725 4.725 0 0 1-.487.609 3.44 3.44 0 0 1-.356.314c-.106.079-.187.112-.243.1a7.03 7.03 0 0 1-.16-.037.612.612 0 0 1-.21-.222.977.977 0 0 1-.107-.355 3.8 3.8 0 0 1-.033-.368 7.473 7.473 0 0 1 .005-.437c.006-.188.009-.315.009-.382 0-.23.005-.48.014-.75l.023-.64c.007-.158.01-.325.01-.501s-.011-.314-.033-.414a1.387 1.387 0 0 0-.098-.29.494.494 0 0 0-.192-.219 1.1 1.1 0 0 0-.314-.123 6.444 6.444 0 0 0-1.263-.118c-1.161-.012-1.907.06-2.238.218-.13.067-.25.158-.355.273-.113.134-.128.206-.047.218.374.055.64.185.795.391l.057.11a1.7 1.7 0 0 1 .13.418c.044.2.072.42.085.663.031.443.031.822 0 1.137-.031.315-.06.56-.089.736a1.443 1.443 0 0 1-.239.628.16.16 0 0 1-.047.045.72.72 0 0 1-.252.046c-.088 0-.194-.043-.319-.128a2.222 2.222 0 0 1-.388-.35 4.684 4.684 0 0 1-.454-.623 10.772 10.772 0 0 1-.524-.945l-.15-.264c-.094-.17-.221-.417-.384-.74a14.085 14.085 0 0 1-.43-.942.602.602 0 0 0-.225-.291l-.047-.027a.647.647 0 0 0-.15-.078 1.016 1.016 0 0 0-.215-.059L3.6 7.48c-.262 0-.44.058-.533.173l-.038.055A.287.287 0 0 0 3 7.852c0 .067.019.149.056.246a29.75 29.75 0 0 0 1.222 2.473c.44.794.822 1.434 1.146 1.918.325.485.656.943.993 1.373.337.43.56.707.669.828.11.121.195.212.257.273l.234.218c.15.145.37.32.66.523.29.203.612.403.965.6a5.32 5.32 0 0 0 1.23.482c.469.124.924.174 1.367.15h1.077c.218-.019.384-.085.496-.2l.037-.046a.593.593 0 0 0 .07-.168.899.899 0 0 0 .033-.25 2.98 2.98 0 0 1 .06-.705c.048-.209.1-.366.16-.472a1.164 1.164 0 0 1 .36-.4.62.62 0 0 1 .075-.032c.15-.049.326-.002.53.14.202.143.393.32.57.528.178.21.392.444.642.705.25.26.468.454.655.582l.187.109c.125.073.287.14.487.2s.374.076.524.045l2.396-.036c.237 0 .422-.038.553-.114.13-.075.209-.159.234-.25a.684.684 0 0 0 .004-.309 1.116 1.116 0 0 0-.065-.24z" fill-rule="evenodd"/>
       </svg>
+
+      <span class="visually-hidden">Войти через VK</span>
     </button>
   </div>
+
+  <footer
+    class="login__disclaimer">
+    Кстати, мы не используем и&nbsp;не храним твои персональные данные
+  </footer>
 </section>
