--- a/lib/src/components/containers/login_container/login_container.scss
+++ b/lib/src/components/containers/login_container/login_container.scss
@@ -41,4 +41,14 @@
       margin-left: 16px;
     }
   }
+
+  .login__disclaimer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 24px 40px;
+    text-align: center;
+    color: $fg-color-secondary;
+  }
 }
