--- a/lib/src/components/layout/layout.html
+++ b/lib/src/components/layout/layout.html
@@ -75,6 +75,7 @@
         </div>
 
         <button
+          (click)="onLogout()"
           class="user__logout-button">
           Выйти
         </button>
