Update CSS variables, remove unnecessary imports

--- a/lib/src/components/containers/welcome_container/welcome_container.scss
+++ b/lib/src/components/containers/welcome_container/welcome_container.scss
@@ -53,7 +53,7 @@
 
   .welcome__description-icon {
     transform: translateY(3px);
-    color: $font-color-main;
+    color: $fg-color-primary;
   }
 
   .welcome__sections {
