--- a/web/assets/styles/variables.scss
+++ b/web/assets/styles/variables.scss
@@ -2,12 +2,8 @@
 $bg-color: #f2f3fa;
 $fg-color-primary: #272a36;
 $fg-color-secondary: #898a92;
-$link-color: #68c0e3;
-
-// TODO remove after merge
-$bgr-color: $bg-color;
-$font-color-main: $fg-color-primary;
-$font-color-secondary: $fg-color-secondary;
+$link-color: #33a7d8;
+$bg-color-icon: #e6f4fa;
 
 // Utility
 $border-radius: 8px;
