--- a/lib/src/components/layout/layout.scss
+++ b/lib/src/components/layout/layout.scss
@@ -11,6 +11,7 @@
   .drawer {
     @include mat-drawer-width(320px);
     @include mat-temporary-drawer-width(320px);
+    -webkit-tap-highlight-color: transparent;
   }
 
   .drawer__header {
@@ -58,11 +59,11 @@
   }
 
   .nav__item {
-    color: $font-color-secondary;
+    color: $fg-color-secondary;
     @include font-heading-3;
 
     &.nav__item--active {
-      color: $font-color-main;
+      color: $fg-color-primary;
 
       .nav__link::before {
         content: "";
