extract link button component

--- a/lib/src/components/containers/welcome_container/welcome_container.html
+++ b/lib/src/components/containers/welcome_container/welcome_container.html
@@ -5,6 +5,7 @@
     class="welcome__content">
 
     <button
+      link-button
       (click)="onClose()"
       class="welcome__skip-button">
       Пропустить
