--- a/lib/app_component.scss
+++ b/lib/app_component.scss
@@ -13,4 +13,14 @@
     text-align: center;
     margin: 20px 10px;
   }
+
+  .popups {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    right: -50%;
+    transform: translate(-50%);
+    display: flex;
+    flex-direction: column-reverse;
+  }
 }
