--- a/lib/src/components/ui/popup/popup.html
+++ b/lib/src/components/ui/popup/popup.html
@@ -1,8 +1,18 @@
-<div>
-	<button
-			(click)="close()">
-		X
-	</button>
 
-	<ng-content></ng-content>
-</div>
+<ng-content></ng-content>
+
+<button
+  (click)="close()"
+  cf-button
+  class="button-icon-only close">
+  <svg
+    aria-hidden="true"
+    class="button-icon"
+    height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    
+    <path
+      d="M13.233 12l5.508-5.501A.878.878 0 0 0 17.5 5.257l-5.5 5.51-5.5-5.51A.878.878 0 1 0 5.26 6.5l5.508 5.5-5.508 5.5a.875.875 0 0 0 0 1.242.874.874 0 0 0 1.241 0l5.5-5.509 5.5 5.51a.874.874 0 0 0 1.241 0 .875.875 0 0 0 0-1.242L13.233 12z"
+      fill="currentColor" fill-rule="evenodd" class="_ngcontent-kkq-4">
+    </path>
+  </svg>
+</button>
