--- a/lib/src/components/layout/layout.html
+++ b/lib/src/components/layout/layout.html
@@ -164,6 +164,14 @@
       <ng-content
         select="[actions]"
       ></ng-content>
+
+      <button
+        cf-button
+        class="button-icon-only"
+        (click)="push"
+      ><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+        <path fill="#272A36" fill-rule="evenodd" d="M18.125 13.087v-2.87c-.003-2.639-1.983-4.891-4.688-5.331v-.984c0-.498-.42-.902-.937-.902-.518 0-.938.404-.938.902v.984c-2.704.44-4.684 2.692-4.687 5.332v2.869c-1.121.381-1.872 1.4-1.875 2.544v1.804c0 .499.42.903.938.903H8.88C9.325 19.909 10.808 21 12.5 21c1.692 0 3.175-1.09 3.619-2.662h2.944c.517 0 .937-.404.937-.903v-1.804c-.003-1.144-.754-2.163-1.875-2.544zm-9.375-2.87c0-1.992 1.679-3.608 3.75-3.608 2.071 0 3.75 1.616 3.75 3.609v2.706h-7.5v-2.706zm3.75 9.023a1.89 1.89 0 0 1-1.613-.902h3.226a1.89 1.89 0 0 1-1.613.902zm5.625-2.707H6.875v-.902c0-.498.42-.902.938-.902h9.375c.517 0 .937.404.937.902v.902z"/>
+    </svg></button>
     </header>
 
     <ng-content
