--- a/lib/app_component.scss
+++ b/lib/app_component.scss
@@ -22,5 +22,10 @@
     transform: translate(-50%);
     display: flex;
     flex-direction: column-reverse;
+
+    @media (min-width: 600px) {
+      max-width: 600px;
+    }
   }
+
 }
