--- a/lib/src/components/containers/lecture_container/lecture_container.html
+++ b/lib/src/components/containers/lecture_container/lecture_container.html
@@ -3,7 +3,7 @@
 
   <layout
     *ngIf="isReady"
-    [title]="'Доклад'"
+    [title]="title"
     [state]="state"
     [navType]="NavigationType.back">
 
