--- a/lib/src/components/containers/welcome_container/welcome_container.html
+++ b/lib/src/components/containers/welcome_container/welcome_container.html
@@ -43,8 +43,8 @@
         [mainSections]="mainSections"
         [isCustomSectionMode]="isCustomSectionMode"
         [selectedSectionIds]="selectedSectionIds"
-        (onSectionsChange)="onSectionsChange($event)"
-        (onCustomSectionModeChange)="onCustomSectionModeChange($event)"
+        (onChange)="onSectionsChange($event)"
+        (onShowApply)="onShowApply($event)"
         class="welcome__sections">
       </sections>
 
