--- a/lib/src/components/containers/lectures_container/now_empty_state/now_empty_state.html
+++ b/lib/src/components/containers/lectures_container/now_empty_state/now_empty_state.html
@@ -1,2 +1,2 @@
-<h2 class="zero-state__title">Пока ничего нет, можешь отдохнуть..</h2>
-<p class="zero-state__description">Или прийти к нам на стенд Wrike пообщаться!</p>
+<h2 class="zero-state__title">Время тишины</h2>
+<p class="zero-state__description">Сейчас ничего не происходит, возвращайся сюда во время мероприятия</p>
