fix search empty state visibility

--- a/lib/src/components/containers/lectures_container/lectures_container.html
+++ b/lib/src/components/containers/lectures_container/lectures_container.html
@@ -91,7 +91,7 @@
       </now-empty-state>
 
       <search-empty-state
-        *ngIf="lectures.isEmpty && isSearchMode && searchText.isNotEmpty">
+        *ngIf="isSearchEmptyStateVisible">
       </search-empty-state>
 
       <!-- schedule -->
