ux: make nav links actual links

--- a/lib/src/components/layout/layout.scss
+++ b/lib/src/components/layout/layout.scss
@@ -60,13 +60,19 @@
   }
 
   .nav__item {
+    display: block;
+    position: relative;
+    padding: 24px 32px;
     color: $fg-color-secondary;
     @include font-heading-3;
+    text-decoration: none;
+    cursor: pointer;
 
     &.nav__item--active {
       color: $fg-color-primary;
+      cursor: default;
 
-      .nav__link::before {
+      &::before {
         content: "";
         display: block;
         width: 4px;
@@ -76,18 +82,9 @@
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
-        margin-left: -12px;
+        left: 20px;
       }
     }
-  }
-
-  .nav__link {
-    padding: 24px 32px;
-    display: block;
-    color: inherit;
-    text-decoration: none;
-    position: relative;
-    cursor: pointer;
   }
   // --- end nav
 
