--- a/lib/src/components/layout/layout.html
+++ b/lib/src/components/layout/layout.html
@@ -37,13 +37,11 @@
 
         <!-- nav__item--active for active state -->
         <li
-          (click)="onMenuItemClick(item)"
-          *ngFor="let item of RoutePaths.menu"
-          [class.nav__item--active]="isActive(item)"
-          class="nav__item">
-
+          *ngFor="let item of RoutePaths.menu">
           <a
-            class="nav__link">
+            [routerLink]="item.toUrl()"
+            [class.nav__item--active]="isActive(item)"
+            class="nav__item">
             {{ item.title }}
           </a>
         </li>
