zero states refined

--- a/lib/src/components/containers/lectures_container/now_empty_state/now_empty_state.html
+++ b/lib/src/components/containers/lectures_container/now_empty_state/now_empty_state.html
@@ -1,2 +1,5 @@
-<h2 class="zero-state__title">Время тишины</h2>
-<p class="zero-state__description">Сейчас ничего не происходит, возвращайся сюда во время мероприятия</p>
+<empty-state
+  icon='<path fill="currentColor" d="M12 4a8 8 0 1 0 0 16 8 8 0 0 0 0-16zm0 14.4a6.4 6.4 0 1 1 0-12.8 6.4 6.4 0 0 1 0 12.8zm2.48-5.9l-1.68-.96V8a.8.8 0 1 0-1.6 0v4.1a.52.52 0 0 0 .04.16.71.71 0 0 0 .06.13.69.69 0 0 0 .08.13l.13.1.07.08 2.08 1.2a.8.8 0 0 0 .4.1.8.8 0 0 0 .4-1.5h.02z"/>'
+  title='Время тишины'
+  message='Сейчас ничего не&nbsp;происходит, возвращайся сюда во время мероприятия'
+></empty-state>
