--- a/lib/src/components/ui/empty_state/empty_state.scss
+++ b/lib/src/components/ui/empty_state/empty_state.scss
@@ -1,4 +1,4 @@
-@import '../../../../../../web/assets/styles/variables.scss';
+@import '../../../../../web/assets/styles/variables.scss';
 
 :host {
   display: block;
@@ -13,6 +13,7 @@
   padding: 0 24px;
 
   .zero-state__icon {
+    opacity: .3;
     margin-bottom: 8px;
   }
 
